components/chat/TextInput.module.css
.textInputContainer {
    position: sticky;
    bottom: 0;
    min-height: 8svh;
    background-color: var(--background-color);
}

.textInputForm {
    position: relative;
    display: flex;
    box-sizing: border-box;
    max-width: calc(min(800px, 100vw - max(20vw, 250px)));
    margin-left: auto;
    margin-right: auto;
    border-radius: 1rem;
    border: 1px solid var(--tertiary-background-color);
    align-items: flex-start;
}

.textInputForm.expanded {
    flex-direction: column;
}

.statusMessage {
    position: absolute;
    top: -1.5rem;
    right: 0;
    color: var(--secondary-foreground-color);
}

.textInputForm:focus-within {
    border: 1px solid var(--secondary-foreground-color);
}

.textarea {
    width: 100%;
    max-height: 12rem;
    overflow: auto;
    border: none;
}

.textarea:focus {
    border: none;
}

.buttonContainer {
    align-self: center;
    display: flex;
    gap: 1rem;
    padding: 0 1rem;
}

.textInputForm.expanded .buttonContainer {
    align-self: flex-end;
    padding: 1rem;
}

.microphoneButton,
.sendButton {
    position: relative;
    padding: 0;
    background-color: transparent;
}

.microphoneIcon, 
.sendIcon {
    width: 1.5rem;
    height: 1.5rem;
    transition: 0.3s ease;
}

.microphoneIcon {
    fill: var(--foreground-color);
}

.microphoneButton:hover .microphoneIcon,
.microphoneButton.listening .microphoneIcon{
    fill: var(--secondary-color);
}

.sendIcon {
    stroke: var(--foreground-color);
}

.sendButton:hover .sendIcon {
    stroke: var(--secondary-color);
}

.loadingWrapper {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.loadingSpinner {
    width: 2rem;
    height: 2rem;
    border: 2px solid var(--secondary-foreground-color);
    border-top: 2px solid transparent;
    border-radius: 50%;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

@media only screen and (max-width: 768px) {
    .textInputForm {
        max-width: none;
    }
}

@media (hover: hover) {
    .sendButton:hover .sendIcon {
        stroke: var(--secondary-color);
    }
}

@media (hover: none) {
    .sendButton:hover .sendIcon {
        stroke: var(--foreground-color);
    }
}

